[package]
name = "egui_pull_to_refresh"
version = "0.8.0"
description = "A pull to refresh library for egui"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_pull_to_refresh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true

[dev-dependencies]
eframe = { workspace = true, default-features = true }
egui_inbox.workspace = true
ehttp.workspace = true

[lints]
workspace = true
