[package]
name = "egui_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true
egui_inbox.workspace = true

matchit = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["History", "PopStateEvent"] }
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
egui_inbox = { workspace = true, features = ["type_inbox"] }
eframe = { workspace = true, default-features = true }
egui_animation = { workspace = true }
tokio = { version = "1", features = ["full"] }
egui_suspense = { workspace = true, features = ["async", "tokio"] }
