[package]
name = "egui_suspense"
version = "0.8.0"
edition = "2021"
authors = ["Lucas Meurer"]
description = "Automatically show loading and error uis for egui"
keywords = ["egui", "ui"]
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_suspense"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_inbox.workspace = true
egui.workspace = true
hello_egui_utils.workspace = true

[features]
async = ["hello_egui_utils/async"]
tokio = ["hello_egui_utils/tokio"]

[[example]]
name = "async"
required-features = ["async", "tokio"]

[dev-dependencies]
eframe = { workspace = true, default-features = true }
rand.workspace = true
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

[lints]
workspace = true
