[package]
name = "egui_taffy"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.release]
release = false

[dependencies]
egui.workspace = true

taffy = "0.5.2"

[dev-dependencies]
eframe = { workspace = true, default-features = true }

rand.workspace = true

[lints]
workspace = true
