[package]
name = "egui_taffy"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[package.metadata.release]
release = false

[dependencies]
egui.workspace = true

taffy = "0.7.5"

[dev-dependencies]
eframe = { workspace = true, default-features = true }

rand.workspace = true

[lints]
workspace = true
