[package]
name = "egui_thumbhash"
version = "0.3.0"
edition = "2021"
authors = ["Lucas Meurer"]
description = "Easily use thumbhashes in egui"
license = "MIT"
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_thumbhash"
homepage = "https://lucasmerlin.github.io/hello_egui/"
keywords = ["egui", "thumbhash", "image", "placeholder"]

[dependencies]
thumbhash = "0.1.0"
egui = { workspace = true }
base64 = "0.21.7"

[dev-dependencies]
eframe = { workspace = true, default-features = true }
egui_extras = { workspace = true, default-features = true, features = ["file", "image", "http"] }

oxhttp = { version = "0.1.7", default-features = false, features = ["client", "rustls"] }
serde = "1"
serde_json = "1"
image = "0.24.7"
