[package]
name = "egui_virtual_list"
version = "0.7.0"
edition = "2021"
authors = ["Lucas Meurer"]
homepage = "https://lucasmerlin.github.io/hello_egui/#/example/gallery"
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_virtual_list"
license = "MIT"
description = "A virtual list widget for egui, with support for variable height items."
keywords = ["egui", "virtual_list", "list", "ui"]

[dependencies]
egui.workspace = true
web-time = "1"

[dev-dependencies]
eframe = { workspace = true, default-features = true }
rand.workspace = true

[lints]
workspace = true
