[package]
name = "hello_egui_utils"
version = "0.8.0"
edition = "2021"
description = "Utilities used by crates from https://github.com/lucasmerlin/hello_egui"
license = "MIT"
repository = "https://github.com/lucasmerlin/hello_egui"
homepage = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/hello_egui_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true
eframe = { workspace = true, optional = true, features = [] }

tokio = { workspace = true, optional = true, features = ["rt"] }

concat-idents = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
async = ["dep:wasm-bindgen-futures"]
tokio = ["async", "dep:tokio"]

example_util = ["dep:eframe"]

default = ["eframe?/default"]

[lints]
workspace = true
