[package]
name = "hello_egui_utils_dev"
version = "0.1.0"
edition = "2024"
description = "Utilities used by crates from https://github.com/lucasmerlin/hello_egui"
license = "MIT"
repository = "https://github.com/lucasmerlin/hello_egui"
homepage = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/hello_egui_utils_dev"

[dependencies]
eframe = { workspace = true, default-features = true }
egui = { workspace = true, default-features = false }

[lints]
workspace = true
