[package]
name = "perfect_cursors"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-time = "1"

[dev-dependencies]
eframe = { workspace = true, default-features = true }

[lints]
workspace = true
